--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/index.css" />
-    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,7 +75,7 @@
           >
             <div class="offcanvas-header">
               <a href="">
-                <img style="width: 70px" src="assets/images/logo.png" alt=""
+                <img style="width: 70px" src="assets/images/logo.png" alt="logo"
               /></a>
               <button
                 onclick="playClick()"
@@ -124,7 +124,7 @@
           <div class="row justify-content-lg-center">
             <div class="col-12 col-lg-6">
                <div class="d-flex justify-content-center mt-5 mb-5">
-                <img style="object-fit: cover;" src="assets/images/contact.png" alt="">
+                <img style="object-fit: cover;" src="assets/images/contact.png" alt="envelope image">
                </div>
               </div>
             <div class="col-12 col-lg-6">
@@ -246,7 +246,7 @@
                   <p class="col-md-4 mb-0 text-gray">© 2024 Anusree Pankan</p>
               
                   <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                   <img src="assets/images/logo.png" style="width: 40px;" alt="">
+                   <img src="assets/images/logo.png" style="width: 40px;" alt="footer logo">
                   </a>
               
                   <ul class="nav col-md-4 justify-content-end">
