--- a/education.html
+++ b/education.html
@@ -12,7 +12,7 @@
     />
 <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/tutorials/timelines/timeline-4/assets/css/timeline-4.css">
     <link rel="stylesheet" href="assets/css/index.css" />
-    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,7 +75,7 @@
           >
             <div class="offcanvas-header">
               <a href="">
-                <img style="width: 70px" src="assets/images/logo.png" alt=""
+                <img style="width: 70px" src="assets/images/logo.png" alt="logo"
               /></a>
               <button
                 onclick="playClick()"
@@ -214,7 +214,7 @@ and assistance.
           <p class="col-md-4 mb-0 text-gray">© 2024 Anusree Pankan</p>
       
           <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-           <img src="assets/images/logo.png" style="width: 40px;" alt="">
+           <img src="assets/images/logo.png" style="width: 40px;" alt="footer logo">
           </a>
       
           <ul class="nav col-md-4 justify-content-end">
