--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         >
           <div class="offcanvas-header">
             <a href="">
-              <img style="width: 70px" src="assets/images/logo.png" alt=""
+              <img style="width: 70px" src="assets/images/logo.png" alt="logo"
             /></a>
             <button
               onclick="playClick()"
@@ -240,7 +240,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow ">
-              <img onmouseover="playClick()"  class="card-img-top" src="assets/images/projects/img-1.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playClick()"  class="card-img-top" src="assets/images/projects/img-1.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">This is a Brototype clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -254,7 +254,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-3.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-3.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">This is my portfolio website, built using HTML, CSS, and JavaScript. It showcases my projects, skills, and progress as a web developer, including website clones and other front-end work.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -267,7 +267,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playClick()"  class="card-img-top"  src="assets/images/projects/img-2.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playClick()"  class="card-img-top"  src="assets/images/projects/img-2.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">Netflix clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -283,7 +283,7 @@
 
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-4.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-4.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
               <div class="card-body">
                 <p class="card-text">Laboratory-related company website using HTML, CSS, and JavaScript. This project enhanced my front-end development skills, with a focus on responsive design.</p>
@@ -294,7 +294,7 @@
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
               <button onmouseover="playClick()" >
-              <img class="card-img-top" src="assets/images/projects/img-6.png" alt="Thumbnail [100%x225]" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img class="card-img-top" src="assets/images/projects/img-6.png" alt="Project UI Screenshot" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
             </button>
               <div class="card-body">
                 <p class="card-text">A comprehensive digital solution for restaurant related website . Built using HTML, CSS, and JavaScript, this project provides an effective platform for managing various restaurant operations.</p>
@@ -304,7 +304,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-5.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-5.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
               <div class="card-body">
                 <p class="card-text"> I developed a company website using HTML, CSS, and JavaScript. The site features a professional design and user-friendly interface, aimed at effectively presenting the company's services and values. </p>
@@ -467,7 +467,7 @@
         <p class="col-md-4 mb-0 text-gray ">© 2024 Anusree Pankan</p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-         <img src="assets/images/logo.png" style="width: 40px;" alt="">
+         <img src="assets/images/logo.png" style="width: 40px;" alt="Logo">
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
