--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     />
 <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/tutorials/timelines/timeline-4/assets/css/timeline-4.css">
     <link rel="stylesheet" href="assets/css/index.css" />
-    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,7 +75,7 @@
           >
             <div class="offcanvas-header">
               <a href="">
-                <img style="width: 70px" src="assets/images/logo.png" alt=""
+                <img style="width: 70px" src="assets/images/logo.png" alt="logo"
               /></a>
               <button
                 onclick="playClick()"
@@ -128,7 +128,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow ">
-            <img onmouseover="playClick()"  class="card-img-top" src="assets/images/projects/img-1.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playClick()"  class="card-img-top" src="assets/images/projects/img-1.png" alt="Projec UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">This is a Brototype clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -142,7 +142,7 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-3.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-3.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">This is my portfolio website, built using HTML, CSS, and JavaScript. It showcases my projects, skills, and progress as a web developer, including website clones and other front-end work.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -155,7 +155,7 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playClick()"  class="card-img-top"  src="assets/images/projects/img-2.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playClick()"  class="card-img-top"  src="assets/images/projects/img-2.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">Netflix clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -171,7 +171,7 @@
 
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-4.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-4.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
             <div class="card-body">
               <p class="card-text">Laboratory-related company website using HTML, CSS, and JavaScript. This project enhanced my front-end development skills, with a focus on responsive design.</p>
@@ -182,7 +182,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
             <button onmouseover="playClick()" >
-            <img class="card-img-top" src="assets/images/projects/img-6.png" alt="Thumbnail [100%x225]" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img class="card-img-top" src="assets/images/projects/img-6.png" alt="Project UI Screenshot" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
           </button>
             <div class="card-body">
               <p class="card-text">A comprehensive digital solution for restaurant related website . Built using HTML, CSS, and JavaScript, this project provides an effective platform for managing various restaurant operations.</p>
@@ -192,7 +192,7 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-5.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-5.png" alt="Project UI Screenshot" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
             <div class="card-body">
               <p class="card-text"> I developed a company website using HTML, CSS, and JavaScript. The site features a professional design and user-friendly interface, aimed at effectively presenting the company's services and values. </p>
@@ -211,7 +211,7 @@
           <p class="col-md-4 mb-0 text-gray">© 2024 Anusree Pankan</p>
       
           <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-           <img src="assets/images/logo.png" style="width: 40px;" alt="">
+           <img src="assets/images/logo.png" style="width: 40px;" alt="footer logo">
           </a>
       
           <ul class="nav col-md-4 justify-content-end">
